--- a/pages/subpages/mall/catering/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/catering/subpages/order-check/index.wxss
@@ -1,163 +1,91 @@
-.nav-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 44px;
-  box-sizing: inherit;
-  z-index: 100;
-}
-.nav-bar.active {
-  background: #4184f7;
-}
-.nav-bar-unit {
-  padding: 0 8px;
-  width: 48px;
-}
-.hotel-name {
-  flex: 1;
-  text-align: center;
-  color: #fff;
-  font-size: 16px;
-}
-.english-name {
-  font-size: 10px;
-}
-
 .container {
-  position: relative;
-  padding: 24rpx 24rpx calc(150rpx + env(safe-area-inset-bottom));
+  padding: 24rpx;
 }
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 600rpx;
-  background: linear-gradient(180deg, #1a69f1 0%, #f5f6f8 100%);
-  z-index: -1;
-}
-
-.room {
+  
+.card {
+  margin-bottom: 24rpx;
   padding: 24rpx;
   background: #fff;
-  border-radius: 18rpx;
+  border-radius: 24rpx;
 }
-.room-name {
+.title {
+  margin-bottom: 24rpx;
   color: #333;
   font-size: 32rpx;
-  font-weight: bold;
-}
-.more-info {
-  color: #333;
-  font-size: 24rpx;
-}
-.more-icon {
-  width: 28rpx;
-  height: 28rpx;
-}
-
-.date-picker-wrap {
-  margin-top: 32rpx;
-}
-.date-picker {
-  position: relative;
-  padding: 0 8px;
-  height: 40px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-}
-.date {
-  color: #333;
-  font-size: 15px;
   font-weight: 550;
 }
-.week {
-  margin-left: 3px;
-  color: #999;
-  font-size: 10px;
-}
-.date-picker-type {
-  position: absolute;
-  top: -6px;
-  left: 12px;
-  padding: 0 3px;
-  color: #333;
-  font-size: 10px;
-  line-height: 1;
-  background: #fff;
-}
-.night-num {
-  margin: 0 12px;
-  color: #333;
-  font-size: 10px;
-}
 
-.room-label-list {
-  margin-top: 32rpx;
+.ticket {
+  position: relative;
+  padding: 24rpx;
+  background: #feede6;
+  border-radius: 24rpx;
 }
-.room-label {
-  padding: 0 24rpx;
+.ticket-title {
   color: #333;
   font-size: 24rpx;
-  line-height: 1;
-  border-right: 1px solid #ddd;
 }
-.room-label:first-child {
-  padding-left: 0;
+.ticket-name {
+  margin-top: 12rpx;
+  color: #333;
+  font-size: 38rpx;
+  font-weight: 550;
 }
-.room-label:last-child {
-  border-right: none;
+.ticket-tips-wrap {
+  margin-top: 48rpx;
 }
-
-.cancellable-status {
-  margin-top: 24rpx;
-  color: #1dc3c1;
+.ticket-tips {
+  margin-top: 12rpx;
   font-size: 24rpx;
 }
-.cancellable-status.uncancellable {
-  color: #333;
-}
-.cancellable-icon {
-  margin-right: 8rpx;
-  width: 26rpx;
-  height: 26rpx;
-}
-
-.card {
-  margin-top: 24rpx;
-  padding: 24rpx 24rpx 0;
-  background-color: #fff;
-  border-radius: 16rpx;
-}
-.card-title {
-  color: #333;
-  font-size: 30rpx;
+.tips-title {
   font-weight: 500;
 }
-.title-tips {
+.tips-content {
   margin-left: 12rpx;
-  color: #999;
-  font-size: 22rpx;
 }
 
-.tourist-info-item {
-  padding: 24rpx 0;
-  font-size: 26rpx;
-  border-bottom: 1px solid #eee;
+.split-line {
+  position: absolute;
+  left: 0;
+  top: 132rpx;
+  width: 100%;
+  height: 24rpx;
 }
-.tourist-info-item:last-child {
-  border-bottom: none;
+.line {
+  margin: 0 24rpx;
+  width: 100%;
+  border-top: 1px dashed #ccc;
 }
-.tourist-info-label {
-  margin-right: 24rpx;
-  color: #333;
+.left-circle, .right-circle {
+  position: absolute;
+  top: 0;
+  width: 12rpx;
+  height: 24rpx;
+  background: #fff;
 }
-.tourist-info-input {
-  flex: 1;
+.left-circle {
+  left: -1px;
+  border-top-right-radius: 12rpx;
+  border-bottom-right-radius: 12rpx;
 }
-.num-setpper {
-  flex: 1;
+.right-circle {
+  right: -1px;
+  border-top-left-radius: 12rpx;
+  border-bottom-left-radius: 12rpx;
+}
+
+.price-wrap {
+  margin-top: 24rpx;
+}
+.discount {
+  margin-top: 6rpx;
+  margin-left: 8rpx;
+  padding: 0 6rpx;
+  color: #F66B38;
+  font-size: 20rpx;
+  border: 1px solid #fed9cc;
+  border-radius: 6rpx;
 }
 
 .bottom-bar {
@@ -173,24 +101,11 @@
 .total-price-wrap {
   margin-right: 32rpx;
 }
-.price-detail-tips {
-  margin-left: 18rpx;
-  color: #999;
-  font-size: 24rpx;
-}
-.arrow {
-  margin-left: 4rpx;
-  width: 26rpx;
-  height: 26rpx;
-}
 .submit-btn {
   height: 80rpx;
   width: 220rpx;
   color: #fff;
   font-size: 32rpx;
   border-radius: 40rpx;
-  background: #e6e6e6;
-}
-.submit-btn.active {
-  background: #161F4E;
+  background: #F66B38;
 }
