--- a/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/components/ticket-item/index.wxml
@@ -4,9 +4,7 @@
 >
   <view class="ticket-info">
     <view class="ticket-name">{{ ticket.price + '代' + ticket.originalPrice + '元代金券' }}</view>
-    <view class="tips row">
-      <view class="tip" wx:for="{{tips}}" wx:key="tipIdx" wx:for-index="tipIdx" wx:for-item="tip">{{ tip }}</view>
-    </view>
+    <view class="tips">{{ tips }}</view>
     <view class="price-wrap row">
       <price-unit price="{{ticket.price || 0}}" color="#F66B38" unitColor="#F66B38" />
       <view class="discount">{{discount}}折</view>
