--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/meal-ticket-detail/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/meal-ticket-detail/index.wxss
@@ -8,6 +8,12 @@
   background: #fff;
   border-radius: 24rpx;
 }
+.title {
+  margin-bottom: 24rpx;
+  color: #333;
+  font-size: 32rpx;
+  font-weight: 550;
+}
 
 .ticket {
   position: relative;
@@ -139,7 +145,7 @@
   width: 240rpx;
   height: 80rpx;
   color: #fff;
-  font-size: 28rpx;
+  font-size: 32rpx;
   border-radius: 40rpx;
   background: #F66B38;
 }
