feat: 代金券订单

--- a/pages/subpages/mine/order-center/index.wxml
+++ b/pages/subpages/mine/order-center/index.wxml
@@ -4,15 +4,15 @@
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
   <navigator class="list row between" url="./subpages/scenic-order-list/index" hover-class="none">
-    <view class="title">门票订单</view>
+    <view class="title">景区门票订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
   <navigator class="list row between" url="./subpages/hotel-order-list/index" hover-class="none">
     <view class="title">酒店订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
-  <navigator class="list row between" url="./subpages/shop-management/index" hover-class="none">
-    <view class="title">餐饮订单</view>
+  <navigator class="list row between" url="./subpages/meal-ticket-order-list/index" hover-class="none">
+    <view class="title">餐饮代金券订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
 </view>
