feat: 代金券订单

--- a/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxss
@@ -8,13 +8,7 @@
 .list-header {
   font-size: 28rpx;
 }
-.shop-avatar {
-  margin-right: 16rpx;
-  width: 40rpx;
-  height: 40rpx;
-  border-radius: 50%;
-}
-.shop-name {
+.restaurant-name {
   flex: 1;
   color: #333;
   font-weight: 500;
