--- a/pages/subpages/mine/components/meal-ticket-item/index.wxml
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxml
@@ -1,32 +1,23 @@
 <view class="ticket">
-  <view class="main-info">
-    <view class="ticket-name">{{ticketInfo.name}} {{ticketInfo.categoryName}}</view>
-    <view class="row between">
-      <price-unit price="{{ticketInfo.price || 0}}" />
-      <view class="count-wrap">
-        <text>x</text>
-        <text class="count">{{ticketInfo.number}}</text>
-      </view>
+  <view class="ticket-title">{{restaurantName}}代金券</view>
+  <view class="ticket-name">{{ticketInfo.price}}代{{ticketInfo.originalPrice}}元代金券</view>
+  <view class="ticket-tips-wrap">
+    <view class="ticket-tips row" wx:if="{{limitTips}}">
+      <view class="tips-title">限制</view>
+      <view class="tips-content">{{limitTips}}</view>
+    </view>
+    <view class="ticket-tips row" bindtap="showNoticePopup">
+      <view class="tips-title">须知</view>
+      <view class="tips-content">{{ usageTips }}</view>
+    </view>
+    <view class="ticket-tips row">
+      <view class="tips-title">保障</view>
+      <view class="tips-content">随时退·过期自动退</view>
     </view>
   </view>
-  <view class="split-line">
+  <view class="split-line row">
     <view class="line"></view>
     <view class="left-circle"></view>
     <view class="right-circle"></view>
-  </view>
-  <view class="ticket-tips">
-    <view class="tips-wrap row">
-      <image class="tips-icon" src="./images/limit.png" />
-      <view class="tips">{{validityTimeDesc}}</view>
-    </view>
-    <view class="tips-wrap row">
-      <image class="tips-icon" src="./images/time.png" />
-      <view class="tips">{{ticketInfo.effectiveTime ? ('出票' + ticketInfo.effectiveTime + '小时后可用') : '出票后立即可用'}}</view>
-    </view>
-    <view class="tips-wrap row" bindtap="showNoticePopup">
-      <image class="tips-icon" src="./images/tips.png" />
-      <view class="tips stress">{{['随时可退', '有条件退', '不可退'][ticketInfo.refundStatus - 1]}}</view>
-      <view class="tips" wx:if="{{!ticketInfo.needExchange}}">无需换票</view>
-    </view>
   </view>
 </view>
