--- a/pages/subpages/mine/components/meal-ticket-item/index.wxss
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxss
@@ -1,91 +1,59 @@
 .ticket {
-  margin: 24rpx 0;
-  border-radius: 18rpx;
-  border: 1px solid #eee;
-}
-
-.main-info {
+  position: relative;
   padding: 24rpx;
-  padding-bottom: 8rpx;
+  background: #feede6;
+  border-radius: 24rpx;
+}
+.ticket-title {
+  color: #333;
+  font-size: 24rpx;
 }
 .ticket-name {
-  margin-bottom: 12rpx;
+  margin-top: 12rpx;
   color: #333;
-  font-size: 32rpx;
-  font-weight: bold;
+  font-size: 38rpx;
+  font-weight: 550;
 }
-.count-wrap {
+.ticket-tips-wrap {
+  margin-top: 48rpx;
+}
+.ticket-tips {
+  margin-top: 12rpx;
   font-size: 24rpx;
-  color: #3979BE;
 }
-.count {
-  margin-left: 5rpx;
-  font-size: 28rpx;
+.tips-title {
   font-weight: 500;
+}
+.tips-content {
+  margin-left: 12rpx;
 }
 
 .split-line {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 32rpx;
+  position: absolute;
+  left: 0;
+  top: 132rpx;
+  width: 100%;
+  height: 24rpx;
 }
 .line {
+  margin: 0 24rpx;
   width: 100%;
-  border-top: 1px dashed #eee;
+  border-top: 1px dashed #ccc;
 }
 .left-circle, .right-circle {
   position: absolute;
   top: 0;
-  width: 16rpx;
-  height: 32rpx;
-  border: 1px solid #eee;
+  width: 12rpx;
+  height: 24rpx;
   background: #fff;
 }
 .left-circle {
   left: -1px;
-  border-top-right-radius: 16rpx;
-  border-bottom-right-radius: 16rpx;
-  border-left-color: #fff;
+  border-top-right-radius: 12rpx;
+  border-bottom-right-radius: 12rpx;
 }
 .right-circle {
   right: -1px;
-  border-top-left-radius: 16rpx;
-  border-bottom-left-radius: 16rpx;
-  border-right-color: #fff;
-}
-
-.ticket-tips {
-  padding: 24rpx;
-  padding-top: 8rpx;
-}
-.tips-wrap {
-  margin-bottom: 8rpx;
-}
-.tips-wrap:last-child {
-  margin-bottom: 0;
-}
-.tips-icon {
-  margin-right: 8rpx;
-  width: 32rpx;
-  height: 32rpx;
-}
-.tips {
-  padding-right: 12rpx;
-  border-right: 1px solid #ddd;
-  margin-right: 12rpx;
-  color: #666;
-  font-size: 22rpx;
-  line-height: 1;
-}
-.tips:last-child {
-  border-right: none;
-}
-.tips.stress {
-  color: #529AFE;
-}
-.right-arrow {
-  margin-left: 2rpx;
-  width: 20rpx;
-  height: 20rpx;
+  border-top-left-radius: 12rpx;
+  border-bottom-left-radius: 12rpx;
 }
