--- a/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/components/order-list/index.wxml
@@ -3,9 +3,8 @@
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
     <view class="list-header row between">
-      <view class="shop-info row" wx:if="{{item.shopId}}" catchtap="navToShop" data-id="{{item.shopId}}">
-        <image class="shop-avatar" wx:if="{{item.shopAvatar}}" src="{{item.shopAvatar}}" />
-        <view class="shop-name omit single-line">{{item.shopName}}</view>
+      <view class="restaurant-info row" catchtap="navToRestaurant" data-id="{{item.restaurantId}}">
+        <view class="restaurant-name omit single-line">{{item.restaurantName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
       <view class="shop-name omit single-line" wx:if="{{!item.shopId}}">官方自营</view>
