--- a/pages/subpages/mine/components/meal-ticket-item/index.wxss
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxss
@@ -1,59 +1,71 @@
 .ticket {
-  position: relative;
-  padding: 24rpx;
-  background: #feede6;
-  border-radius: 24rpx;
+  margin: 24rpx 0;
+  border-radius: 18rpx;
+  border: 1px solid #eee;
 }
-.ticket-title {
-  color: #333;
-  font-size: 24rpx;
+
+.main-info {
+  padding: 24rpx;
+  padding-bottom: 8rpx;
 }
 .ticket-name {
-  margin-top: 12rpx;
+  margin-bottom: 12rpx;
   color: #333;
-  font-size: 38rpx;
-  font-weight: 550;
+  font-size: 32rpx;
+  font-weight: bold;
 }
+.count-wrap {
+  font-size: 24rpx;
+  color: #3979BE;
+}
+.count {
+  margin-left: 5rpx;
+  font-size: 28rpx;
+  font-weight: 500;
+}
+
+.split-line {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 32rpx;
+}
+.line {
+  width: 100%;
+  border-top: 1px dashed #eee;
+}
+.left-circle, .right-circle {
+  position: absolute;
+  top: 0;
+  width: 16rpx;
+  height: 32rpx;
+  border: 1px solid #eee;
+  background: #fff;
+}
+.left-circle {
+  left: -1px;
+  border-top-right-radius: 16rpx;
+  border-bottom-right-radius: 16rpx;
+  border-left-color: #fff;
+}
+.right-circle {
+  right: -1px;
+  border-top-left-radius: 16rpx;
+  border-bottom-left-radius: 16rpx;
+  border-right-color: #fff;
+}
+
 .ticket-tips-wrap {
-  margin-top: 48rpx;
+  padding: 24rpx;
+  padding-top: 8rpx;
 }
 .ticket-tips {
   margin-top: 12rpx;
-  font-size: 24rpx;
+  font-size: 22rpx;
 }
 .tips-title {
   font-weight: 500;
 }
 .tips-content {
   margin-left: 12rpx;
-}
-
-.split-line {
-  position: absolute;
-  left: 0;
-  top: 132rpx;
-  width: 100%;
-  height: 24rpx;
-}
-.line {
-  margin: 0 24rpx;
-  width: 100%;
-  border-top: 1px dashed #ccc;
-}
-.left-circle, .right-circle {
-  position: absolute;
-  top: 0;
-  width: 12rpx;
-  height: 24rpx;
-  background: #fff;
-}
-.left-circle {
-  left: -1px;
-  border-top-right-radius: 12rpx;
-  border-bottom-right-radius: 12rpx;
-}
-.right-circle {
-  right: -1px;
-  border-top-left-radius: 12rpx;
-  border-bottom-left-radius: 12rpx;
 }
