--- a/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index.wxml
@@ -4,12 +4,10 @@
 <view class="container">
   <view class="card">
     <view class="card-header row">
-      <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
-        <image class="shop-avatar" wx:if="{{orderInfo.shopAvatar}}" src="{{orderInfo.shopAvatar}}" />
-        <view class="shop-name omit single-line">{{orderInfo.shopName}}</view>
+      <view class="restaurant-info row" catchtap="navToRestaurant" data-id="{{orderInfo.restaurantId}}">
+        <view class="restaurant-name omit single-line">{{orderInfo.restaurantName}}</view>
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
-      <view class="shop-name omit single-line" wx:if="{{!orderInfo.shopId}}">官方自营</view>
     </view>
     <meal-ticket-item restaurantName="{{orderInfo.restaurantName}}" ticketInfo="{{orderInfo.ticketInfo}}" />
     <view class="list row between">
