--- a/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index.wxss
@@ -12,13 +12,7 @@
   margin-bottom: 24rpx;
   font-size: 28rpx;
 }
-.shop-avatar {
-  margin-right: 16rpx;
-  width: 40rpx;
-  height: 40rpx;
-  border-radius: 50%;
-}
-.shop-name {
+.restaurant-name {
   flex: 1;
   color: #333;
   font-weight: 500;
