--- a/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxml
@@ -76,7 +76,7 @@
 </view>
 
 <view class="order-list-wrap {{ menuFixed ? 'fixed' : '' }}">
-  <order-list list="{{orderList}}" bind:update="updateOrderList" />
+  <meal-ticket-order-list wx:if="{{orderType === 1}}" list="{{orderList}}" bind:update="updateOrderList" />
   <empty-illus wx:if="{{finished && !orderList.length}}" desc="暂无订单列表" />
   <view class="no-more-tips" wx:if="{{finished && orderList.length}}">～没有更多了～</view>
 </view>
