--- a/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/meal-ticket-order-detail/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/subpages/meal-ticket-order-detail/index.wxss
@@ -8,9 +8,10 @@
   border-radius: 20rpx;
 }
 
-.card-header {
-  margin-bottom: 24rpx;
+.restaurant-name {
+  color: #333;
   font-size: 28rpx;
+  font-weight: 500;
 }
 
 .list {
