--- a/pages/subpages/mall/catering/subpages/restaurant-detail/components/set-meal-item/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/components/set-meal-item/index.wxml
@@ -1,19 +1,19 @@
 <view 
-  class="set-meal-item row between" 
+  class="set-meal-item row" 
   bindtap="checkDetail"
 >
+  <image class="cover" src="{{ info.cover }}" mode="aspectFill" lazy-load />
   <view class="set-meal-info">
-    <view class="set-meal-name">{{ ticket.price + '代' + ticket.originalPrice + '元代金券' }}</view>
+    <view class="set-meal-name">{{ info.name }}</view>
     <view class="tips">{{ tips }}</view>
     <view class="price-wrap row">
-      <price-unit price="{{ticket.price || 0}}" color="#F66B38" unitColor="#F66B38" />
+      <price-unit price="{{info.price || 0}}" color="#F66B38" unitColor="#F66B38" />
+      <view class="original-price">{{ info.originalPrice }}</view>
       <view class="discount">{{discount}}折</view>
     </view>
   </view>
   <view class="buy-btn-wrap">
     <button class="buy-btn" catchtap="buy">抢购</button>
-     <view class="sales">已售 {{ticket.salesVolume}}</view>
+     <view class="sales">已售 {{info.salesVolume}}</view>
   </view>
-  <view class="left-circle"></view>
-  <view class="right-circle"></view>
 </view>
