--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/set-meal-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/set-meal-detail/index.wxml
@@ -1,31 +1,38 @@
 <view class="container">
   <view class="card">
-    <view class="ticket">
-      <view class="ticket-title">{{restaurantName}}代金券</view>
-      <view class="ticket-name">{{setMealInfo.price}}代{{setMealInfo.originalPrice}}元代金券</view>
-      <view class="ticket-tips-wrap">
-        <view class="ticket-tips row" wx:if="{{limitTips}}">
-          <view class="tips-title">限制</view>
-          <view class="tips-content">{{limitTips}}</view>
-        </view>
-        <view class="ticket-tips row">
-          <view class="tips-title">保障</view>
-          <view class="tips-content">随时退·过期自动退</view>
-        </view>
-      </view>
-      <view class="split-line row">
-        <view class="line"></view>
-        <view class="left-circle"></view>
-        <view class="right-circle"></view>
-      </view>
-    </view>
-
+    <view class="set-meal-name">{{setMealInfo.name}}</view>
+    <image class="cover" src="{{setMealInfo.cover}}" mode="widthFix" />
     <view class="price-wrap row between">
       <view class="row">
         <price-unit price="{{setMealInfo.price || 0}}" fontSize="28rpx" integerFontSize="42rpx" color="#F66B38" unitColor="#F66B38" />
+        <view class="original-price">¥{{ setMealInfo.originalPrice }}</view>
         <view class="discount">{{ discount }}折</view>
       </view>
       <view class="sales-volume">已售{{ setMealInfo.salesVolume }}</view>
+    </view>
+    <view class="set-meal-tips-wrap">
+      <view class="set-meal-tips row" wx:if="{{limitTips}}">
+        <view class="tips-title">限制</view>
+        <view class="tips-content">{{limitTips}}</view>
+      </view>
+      <view class="set-meal-tips row">
+        <view class="tips-title">保障</view>
+        <view class="tips-content">随时退·过期自动退</view>
+      </view>
+    </view>
+  </view>
+
+  <view class="title">套餐详情</view>
+  <view class="card">
+    <view class="food-type-item" wx:for="{{setMealInfo.packageDetails}}" wx:key="index">
+      <view class="food-type">{{ item.name }}</view>
+      <view class="food-item row between" wx:for="{{item.foodList}}" wx:key="foodIdx" wx:for-item="food" wx:for-index="foodIdx">
+        <view class="food-name">{{ food.name }}</view>
+        <view class="row">
+          <view class="food-num">（{{food.num}}份）</view>
+          <view class="food-price">¥{{food.price}}</view>
+        </view>
+      </view>
     </view>
   </view>
 
@@ -43,13 +50,6 @@
         <view class="rule-content">
           <view class="content" wx:for="{{useTimeDescList}}" wx:key="index">{{ item }}</view>
           <view wx:if="{{!useTimeDescList.length}}">营业时间内可用</view>
-        </view>
-      </view>
-      <view class="rule">
-        <view class="rule-title">适用范围</view>
-        <view class="rule-content">
-          <view class="content">{{ inapplicableProductsDesc ? ('除' + inapplicableProductsDesc + '以外全场通用') : '全场菜品、酒水饮料通用' }}</view>
-          <view class="content">{{ setMealInfo.boxAvailable ? '' : '不' }}可用于包间消费</view>
         </view>
       </view>
       <view class="rule">
