--- a/pages/subpages/mine/components/set-meal-item/index.wxml
+++ b/pages/subpages/mine/components/set-meal-item/index.wxml
@@ -1,9 +1,14 @@
-<view class="set-meal-item row" wx:for="{{list}}" wx:key="index" >
+<view class="set-meal-item row">
   <image class="set-meal-img" src="{{info.cover}}" mode="aspectFill" lazy-load />
   <view class="set-meal-content">
     <view class="set-meal-name omit">{{info.name}}</view>
-    <view class="set-meal-price-wrap">
-      <price-unit price="{{info.price || 0}}" color="#333" />
+    <view class="tips">{{ tips }}</view>
+    <view class="set-meal-price-wrap row between">
+      <view class="price-wrap row">
+        <price-unit price="{{info.price || 0}}" color="#F66B38" unitColor="#F66B38" />
+        <view class="original-price">¥{{ info.originalPrice }}</view>
+        <view class="discount">{{discount}}折</view>
+      </view>
       <view class="count-wrap">
         <text>x</text>
         <text class="count">{{info.number}}</text>
