--- a/pages/subpages/mine/order-center/index.wxml
+++ b/pages/subpages/mine/order-center/index.wxml
@@ -15,4 +15,8 @@
     <view class="title">餐饮代金券订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
+  <navigator class="list row between" url="./subpages/set-meal-order-list/index" hover-class="none">
+    <view class="title">餐饮套餐订单</view>
+    <image class="arrow" src="./images/arrow.png" />
+  </navigator>
 </view>
