--- a/pages/subpages/mine/order-center/subpages/set-meal-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/set-meal-order-list/subpages/order-detail/index.wxml
@@ -9,16 +9,12 @@
         <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
       </view>
     </view>
-    <meal-ticket-item ticketInfo="{{orderInfo.ticketInfo}}" />
+    <set-meal-item info="{{orderInfo.setMealInfo || null}}" bind:checkDetail="navToSetMealDetail" />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
-      <price-unit price="{{orderInfo.paymentAmount}}" />
+      <price-unit price="{{orderInfo.paymentAmount || 0}}" />
     </view>
     <view class="more-info-wrap">
-      <view class="list row top">
-        <view class="title">游客信息：</view>
-        <view class="content">{{orderInfo.consignee}}，{{orderInfo.mobile}}</view>
-      </view>
       <view class="list row between">
         <view class="title">订单编号：</view>
         <view>
