feat: 餐饮套餐订单

--- a/pages/subpages/mine/merchant-center/subpages/catering-management/components/set-meal-order-list/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/components/set-meal-order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
@@ -10,7 +10,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <goods-list list="{{item.goodsList}}" />
+      <set-meal-item restaurantName="{{item.restaurantName}}" info="{{item.setMealInfo}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
@@ -36,11 +36,6 @@
           catchtap="cancelOrder" data-id="{{item.id}}" data-index="{{index}}"
         >取消订单</button>
         <button class="btn" catchtap="navToDetail" data-id="{{item.id}}">查看详情</button>
-        <button 
-          class="btn active" 
-          wx:if="{{item.status === 201}}"
-          catchtap="deliverOrder" data-id="{{item.id}}" data-index="{{index}}"
-        >去发货</button>
       </view>
     </view>
   </view>
