--- a/pages/subpages/mine/components/set-meal-item/index.wxss
+++ b/pages/subpages/mine/components/set-meal-item/index.wxss
@@ -13,6 +13,11 @@
   flex: 1; 
   height: 190rpx;
 }
+.restaurant-name {
+  margin-bottom: 8rpx;
+  color: #333;
+  font-size: 26rpx;
+}
 .set-meal-name {
   color: #333;
   font-size: 30rpx;
@@ -21,7 +26,7 @@
 .tips {
   margin-top: 8rpx;
   flex: 1;
-  color: #666;
+  color: #999;
   font-size: 22rpx;
 }
 .original-price {
