--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -1,5 +1,5 @@
 <view class="list-wrap">
-  <view class="list row between">
+  <view class="list row between" bindtap="editUserInfo">
     <view class="title">编辑个人信息</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
