--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -61,11 +61,12 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 400rpx;
   z-index: -1;
 }
 .content {
   position: relative;
-  margin-top: 260rpx;
+  margin-top: 360rpx;
   border-radius: 30rpx 30rpx 0 0;
   background: #f5f6f8;
 }
